# spececho-diff

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPETITOR_SCAN.md  PRIVACY_AND_SECURITY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md
examples/petstore/: fixture_data.py  openapi.yaml  prod_app.py  staging_app.py
scripts/: capture_report_screenshot.py  demo.ps1  demo.py  package_release.ps1  package_release.py  release_check.ps1  release_check.py  verify.ps1  verify.py
src/spececho_diff/: __init__.py  app.py  cli.py
src/spececho_diff/adapters/: __init__.py  files.py  http.py
src/spececho_diff/domain/: __init__.py  diff.py  models.py  openapi.py
src/spececho_diff/report/: html.py
src/spececho_diff/services/: __init__.py  analyzer.py
tests/e2e/: test_cli_demo.py
tests/integration/: test_analyzer.py  test_report_outputs.py
tests/unit/: test_app.py  test_diff.py  test_http_adapter.py  test_openapi.py  test_security.py
