[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spececho-diff"
version = "0.1.0"
description = "Compare real API responses against OpenAPI contracts and semantic drift between staging and production."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "KanadeK" }]
keywords = ["openapi", "api-testing", "contract-testing", "fastapi", "diff"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "openapi-core>=0.19,<1.0",
  "prance>=23.6,<24.0",
  "pydantic>=2.8,<3.0",
  "pyyaml>=6.0,<7.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "mypy>=1.17,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "respx>=0.21,<1.0",
  "ruff>=0.5,<1.0",
  "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
spececho-diff = "spececho_diff.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spececho_diff"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["spececho_diff"]
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:flakeharbor"

[tool.coverage.run]
branch = true
source = ["src/spececho_diff"]

[tool.coverage.report]
show_missing = true
skip_covered = true
